--- a/Deployments/web-service-deployment.yaml
+++ b/Deployments/web-service-deployment.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: web-service
   name: web-service
 spec:
-  replicas: 1
+  replicas: 3
   strategy: {}
   template:
     metadata:
@@ -18,10 +18,13 @@ spec:
         io.kompose.service: web-service
     spec:
       containers:
-      - image: web-service
+      - image: index.docker.io/mattshallow/micro:web-v1
+        imagePullPolicy: Always
         name: web-service
         ports:
         - containerPort: 8080
         resources: {}
       restartPolicy: Always
+      imagePullSecrets:
+      - name: myregistrykey
 status: {}
