--- a/Services/compute-service-service.yaml
+++ b/Services/compute-service-service.yaml
@@ -9,11 +9,10 @@ metadata:
     io.kompose.service: compute-service
   name: compute-service
 spec:
-  clusterIP: None
   ports:
-  - name: headless
-    port: 55555
-    targetPort: 0
+  - name: "9090"
+    port: 9090
+    targetPort: 9090
   selector:
     io.kompose.service: compute-service
 status:
