--- a/Services/redis-service.yaml
+++ b/Services/redis-service.yaml
@@ -11,9 +11,9 @@ metadata:
 spec:
   clusterIP: None
   ports:
-  - name: headless
-    port: 55555
-    targetPort: 0
+  - name: "6379"
+    port: 6379
+    targetPort: 6379
   selector:
     io.kompose.service: redis
 status:
