--- a/Deployments/compute-service-deployment.yaml
+++ b/Deployments/compute-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         io.kompose.service: compute-service
     spec:
       containers:
-      - image: index.docker.io/mattshallow/micro:compute-v1
+      - image: gcr.io/microassignment-199111/compute-service:v1
         name: compute-service
         ports:
         - containerPort: 9090
