--- a/Deployments/web-service-deployment.yaml
+++ b/Deployments/web-service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         io.kompose.service: web-service
     spec:
       containers:
-      - image: gcr.io/microassignment-199111/github-shallowtek-microass1:web-v1
+      - image: gcr.io/microassignment-199111/web-service:v1
         imagePullPolicy: Always
         name: web-service
         ports:
