--- a/Deployments/redis-deployment.yaml
+++ b/Deployments/redis-deployment.yaml
@@ -1,25 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml
-    kompose.version: 1.10.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: redis
   name: redis
 spec:
   replicas: 1
-  strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: redis
+        app: redis
     spec:
       containers:
-      - image: redis
-        name: redis
-        resources: {}
-      restartPolicy: Always
-status: {}
+      - name: redis
+        image: redis
+        ports:
+        - containerPort: 6379
+
+
+        
