--- a/Services/redis-service.yaml
+++ b/Services/redis-service.yaml
@@ -1,20 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml
-    kompose.version: 1.10.0 (HEAD)
-  creationTimestamp: null
   labels:
-    io.kompose.service: redis
+    app: redis
   name: redis
 spec:
-  clusterIP: None
   ports:
-  - name: "6379"
-    port: 6379
-    targetPort: 6379
+   - port: 6379
   selector:
-    io.kompose.service: redis
-status:
-  loadBalancer: {}
+    app: redis
+ 
+
