--- a/Deployments/compute-service-deployment.yaml
+++ b/Deployments/compute-service-deployment.yaml
@@ -1,12 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml
-    kompose.version: 1.10.0 (HEAD)
-  creationTimestamp: null
   labels:
-    io.kompose.service: compute-service
+    app: compute-service
   name: compute-service
 spec:
   replicas: 3
@@ -15,15 +11,11 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: compute-service
+        app: compute-service
     spec:
       containers:
       - image: gcr.io/microassignment-199111/compute-service:v1
         name: compute-service
         ports:
         - containerPort: 9090
-        resources: {}
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: myregistrykey
-status: {}
+
