--- a/Deployments/web-service-deployment.yaml
+++ b/Deployments/web-service-deployment.yaml
@@ -1,12 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml
-    kompose.version: 1.10.0 (HEAD)
-  creationTimestamp: null
   labels:
-    io.kompose.service: web-service
+    app: web-service
   name: web-service
 spec:
   replicas: 3
@@ -15,7 +11,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.service: web-service
+        app: web-service
     spec:
       containers:
       - image: gcr.io/microassignment-199111/web-service:v1
@@ -23,6 +19,5 @@ spec:
         name: web-service
         ports:
         - containerPort: 8080
-        resources: {}
-status: {}
 
+      
