--- a/Services/compute-service-service.yaml
+++ b/Services/compute-service-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose.yml
-    kompose.version: 1.10.0 (HEAD)
-  creationTimestamp: null
   labels:
-    io.kompose.service: compute-service
+    app: compute-service
   name: compute-service
 spec:
   ports:
@@ -14,6 +10,6 @@ spec:
     port: 9090
     targetPort: 9090
   selector:
-    io.kompose.service: compute-service
+    app: compute-service
 status:
   loadBalancer: {}
