--- a/Services/redis-service.yaml
+++ b/Services/redis-service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: redis
   labels:
     app: redis
-  name: redis
 spec:
   ports:
-   - port: 6379
+  - port: 6379
+    targetPort: 6379
   selector:
     app: redis
- 
+    
 
