--- a/ComputeService/Dockerfile
+++ b/ComputeService/Dockerfile
@@ -1,5 +1,5 @@
 #get golang
-FROM golang:1.8
+FROM golang:latest
 
 #select working directory
 WORKDIR /ComputeService
@@ -10,11 +10,9 @@ COPY . .
 #get all the imports and install
 run go get -d -v ./...
 
-EXPOSE 9090
-
 #build the go file
 RUN go build computeService.go
-
+EXPOSE 8080
 #start the service
 ENTRYPOINT ["/ComputeService/computeService"]
 
